--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,5 @@
 file.reference.PageNavi2_Blogger-public_html=public_html
 file.reference.PageNavi2_Blogger-test=test
+file.reference.PageNavi_Blogger2-public_html=public_html
 files.encoding=UTF-8
-site.root.folder=${file.reference.PageNavi2_Blogger-public_html}
-test.folder=${file.reference.PageNavi2_Blogger-test}
+site.root.folder=${file.reference.PageNavi_Blogger2-public_html}
